--- a/main/views/Home/style.less
+++ b/main/views/Home/style.less
@@ -2,23 +2,92 @@
   & {
     height: 100%;
     width: 100%;
+    overflow: hidden;
     position: relative;
   }
 
-  .webview-wrapper {
+  #frame-container {
     width: 100%;
-    height: 500px;
-    display: block;
-    overflow: auto;
+    height: 32px;
+    border: 1px solid red;
+    display: none;
   }
 
-  .webview-wrapper.active {
-    display: block;
+  #nav-container {
+    width: 100%;
+    height: 64px;
+    border: 1px solid blue;
   }
 
-  #webview-container {
+  .main {
     width: 100%;
-    height: 100%;
-    /* 使用百分比以填充父元素大小 */
+    height: calc(100% - 64px);
+    // height: calc(100% - 32px - 64px);
+    border: 1px solid yellow;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+
+    #tool-container {
+      height: 100%;
+      width: 128px;
+      border: 1px solid red;
+      transition: all 0.5s;
+
+      &.collapsed {
+        width: 48px;
+      }
+    }
+
+
+    .modules {
+      flex: auto;
+      height: 100%;
+      border: 1px solid blue;
+
+      #tab-container {
+        width: 100%;
+        height: 48px;
+        border: 1px solid orange;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 10px;
+
+        .tool-icon-btn {
+          font-size: 24px;
+          transition: all 0.3s;
+          cursor: pointer;
+
+          .tool-open-icon {
+            display: none;
+          }
+
+          .tool-close-icon {
+            display: block;
+          }
+
+          &.collapsed .tool-open-icon {
+            display: block;
+          }
+
+          &.collapsed .tool-close-icon {
+            display: none;
+          }
+
+          &:active {
+            transform: scale(0.91);
+          }
+        }
+      }
+
+      #webview-container {
+        width: 100%;
+        overflow: hidden;
+        height: calc(100% - 48px);
+        border: 1px solid black;
+      }
+    }
   }
 }
