Fix: webview 高度塌陷问题，webview 不能使用 display none 与 block 来控制显示。

--- a/main/components/AdaptWebView/style.less
+++ b/main/components/AdaptWebView/style.less
@@ -1,7 +1,13 @@
 .adapt-webview {
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
+  height: 100%;
   border: none;
   outline: none;
   background: none;
+
+  &.hidden {
+    width: 0 !important;
+    height: 0 !important;
+    flex: 0 1 !important;
+  }
 }
