--- a/main/components/AdaptWebView/style.less
+++ b/main/components/AdaptWebView/style.less
@@ -1,6 +1,8 @@
 .adapt-webview {
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   border: none;
   outline: none;
   background: none;
