Feat: 优化页面布局

--- a/main/views/Home/style.less
+++ b/main/views/Home/style.less
@@ -30,7 +30,7 @@
     }
 
     &:active {
-      transform: scale(0.9);
+      transform: scale(0.91);
     }
   }
 
@@ -39,21 +39,46 @@
     height: calc(100% - 64px);
     // height: calc(100% - 32px - 64px);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: flex-start;
 
-    #tab-container {
-      width: 100%;
-      min-height: 48px;
+    #tool-container {
+      height: 100%;
+      min-width: 128px;
+      width: 128px;
       background-color: whitesmoke;
+      transition: all 0.5s;
+      border: 1px solid red;
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      padding: 10px;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      &.collapsed {
+        min-width: 48px;
+        width: 48px;
+
+        .tool-icon-btn {
+          margin-left: -10px;
+
+          .tool-title {
+            opacity: 0;
+            min-width: 0; // 搭配 margin-left: -10px; 使用
+            // font-size: 0;
+          }
+
+          .tool-open-icon {
+            display: block;
+          }
+
+          .tool-close-icon {
+            display: none;
+          }
+        }
+      }
 
       .tool-title {
-        margin-right: 5px;
         font-size: 20px;
         letter-spacing: 1px;
         transition: all 0.5s;
@@ -92,34 +117,14 @@
         }
       }
 
-      &.collapsed {
-        .tool-icon-btn {
-          width: 48px;
-
-          .tool-open-icon {
-            display: block;
-          }
-
-          .tool-close-icon {
-            display: none;
-          }
-        }
-
-        .tool-title {
-          opacity: 0;
-          width: 0;
-        }
-      }
-
       .tool-icon-btn {
         font-size: 24px;
         transition: all 0.5s;
         cursor: pointer;
-        margin-left: -10px;
-        width: 128px;
-        height: 100%;
+        width: 100%;
+        height: 48px;
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
 
         .tool-open-icon {
@@ -136,35 +141,50 @@
           transform: scale(0.91);
         }
       }
-
-      .ant-tabs-nav {
-        margin: 0 !important;
-      }
     }
 
     .modules-wrapper {
-      width: 100%;
-      min-height: calc(100% - 48px);
+      min-width: calc(100% - 128px);
+      max-width: calc(100% - 48px);
+      flex: auto;
+      height: 100%;
       display: flex;
+      flex-direction: column;
       justify-content: flex-start;
       align-items: flex-start;
 
-      #tool-container {
-        height: 100%;
-        min-width: 128px;
+      #tab-container {
+        width: 100%;
+        min-height: 48px;
+        max-height: 48px;
         background-color: whitesmoke;
-        transition: all 0.5s;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px;
 
-        &.collapsed {
-          min-width: 48px;
+        .tabs-options {
+          min-width: 210px;
+          display: flex;
+          justify-content: flex-end;
+        }
+
+        .tabs-box {
+          max-width: calc(100% - 210px);
+        }
+
+        .ant-tabs-nav {
+          margin: 0 !important;
         }
       }
 
       #webview-container {
+        padding: 3px 5px 0;
         width: 100%;
-        flex: auto;
         overflow: hidden;
-        height: 100%;
+        height: calc(100% - 48px);
+        flex: auto;
         border: 1px solid black;
       }
     }
