--- a/main/views/Home/style.less
+++ b/main/views/Home/style.less
@@ -9,8 +9,51 @@
   #frame-container {
     width: 100%;
     height: 32px;
-    border: 1px solid red;
-    display: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    color: whitesmoke;
+    background: #00c6ff;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    h1 {
+      position: relative;
+      padding-left: 26px;
+
+      &::before {
+        content: '';
+        display: inline-block;
+        position: absolute;
+        left: 2px;
+        top: -0.5px;
+        width: 20px;
+        height: 20px;
+        background-image: url('icon.png');
+        background-position: 100% 100%;
+        background-size: contain;
+        background-repeat: no-repeat;
+      }
+    }
+
+    .frame-toolbar {
+      flex: auto;
+      height: 100%;
+      -webkit-app-region: drag;
+      cursor: pointer;
+    }
+
+    .icon-btn {
+      font-size: 18px;
+    }
   }
 
   #nav-container {
@@ -36,8 +79,8 @@
 
   .main {
     width: 100%;
-    height: calc(100% - 64px);
-    // height: calc(100% - 32px - 64px);
+    // height: calc(100% - 64px);
+    height: calc(100% - 32px - 64px);
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -49,7 +92,6 @@
       width: 128px;
       background-color: whitesmoke;
       transition: all 0.5s;
-      border: 1px solid red;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
@@ -192,11 +234,13 @@
 
   #fullscreen-container {
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 32px);
+    margin-top: 32px;
     position: fixed;
+    z-index: 99;
     left: 0;
     top: 0;
-    background-color: chocolate;
+    border: 1px solid chocolate;
     display: none;
   }
 }
