Fix: icon path & destroy event bug

--- a/main/views/Home/style.less
+++ b/main/views/Home/style.less
@@ -37,7 +37,7 @@
         top: -0.5px;
         width: 20px;
         height: 20px;
-        background-image: url('icon.png');
+        background-image: url('/icon.png');
         background-position: 100% 100%;
         background-size: contain;
         background-repeat: no-repeat;
