Feat: 增加自定义常用 hooks

--- a/main/views/Home/style.less
+++ b/main/views/Home/style.less
@@ -52,7 +52,6 @@
         overflow: hidden;
         height: calc(100% - 48px);
         flex: auto;
-        border: 1px solid black;
       }
     }
   }
@@ -65,7 +64,7 @@
     z-index: 99;
     left: 0;
     top: 0;
-    border: 1px solid chocolate;
+    background-color: whitesmoke;
     display: none;
   }
 }
